--- a/templates/equipment-sheet.html
+++ b/templates/equipment-sheet.html
@@ -7,7 +7,7 @@
         </div>
         
         <div class="layout__header">
-            <input class="header-title header-title--small" type="text" name="item.name" value="{{item.name}}", placeholder="Name">
+            <input class="header-title header-title--small" type="text" name="name" value="{{item.name}}", placeholder="Name">
         </div>
 
         {{#if isBeingEdited}}
