--- a/templates/spell-sheet.html
+++ b/templates/spell-sheet.html
@@ -54,13 +54,13 @@
                                 <label class="table__data table__data--left-aligned">Casting Time: </label>
                             </div>
                             <div class="table__field">
-                                <span><input class="table__data" type="radio" name="data.castingtime" value=""><label> Normal</label></span>
+                                <span><input class="table__data" type="radio" name="data.castingtime" value="Normal" d-type="Radio" {{radio data.castingtime "Normal"}}><label> Normal</label></span>
                             </div>
                             <div class="table__field">
-                                <span><input class="table__data" type="radio" name="data.castingtime" value="Ritual"><label> Ritual</label></span>
+                                <span><input class="table__data" type="radio" name="data.castingtime" value="Ritual" d-type="Radio" {{radio data.castingtime "Ritual"}}><label> Ritual</label></span>
                             </div>
                             <div class="table__field">
-                                <span><input class="table__data" type="radio" name="data.castingtime" value="Power Word"><label> Power Word</label></span>
+                                <span><input class="table__data" type="radio" name="data.castingtime" value="Power Word" d-type="Radio" {{radio data.castingtime "Power Word"}}><label> Power Word</label></span>
                             </div>
                     </div>    
 
