--- a/templates/weapon-sheet.html
+++ b/templates/weapon-sheet.html
@@ -236,6 +236,7 @@
     {{else}}
     
     <!-- DISPLAY -->
+    {{log this}}
     <div class="layout__body">
         <!-- COMBAT STATS -->
         <div class="table">
